chore: replace deprecated code or switch off warning